--- a/observer-rxjs/RxJS/index.html
+++ b/observer-rxjs/RxJS/index.html
@@ -9,6 +9,9 @@
   <h1></h1>
   <input class="test-input" type="text" />
   <button class="btn">Click</button>
+  <h3>Find car by name: </h3>
+  <input type="text" id="car"/>
+  <div class="filteredCar"></div>
   <script type="module" src="./index.js"></script>
 </body>
 </html>
